<resources>
    <string name="app_name">Euchre Score</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data">Clear Game Data</string>
    <string name="clear_data_confirmation">Are you sure you want to clear data? This cannot be undone.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_you_won">team_name has won the game! Would you like to play again?</string>
    <string name="continu">Continue</string>
    <string name="continue_old_game">Would you like to continue your pre-existing game?</string>
    <string name="create_new_game">Create New Game</string>
    <string name="custom_game_wizard_enter_game_name">Enter Game Name:</string>
    <string name="custom_game_wizard_enter_game_scores">Enter Game Scores:</string>
    <string name="custom_game_wizard_enter_number_of_teams">Enter Number of Teams:</string>
    <string name="custom_game_wizard_have_negative_scores">Can scores be negative?</string>
    <string name="custom_game_wizard_enter_target_score">What is the target score?</string>
    <string name="delete_game">Delete Game</string>
    <string name="delete_game_confirmation">Are you sure you want to delete this game and all its data? This can not be undone.</string>
    <string name="game_could_not_be_created">Game could not be created</string>
    <string name="game_name_bid_euchre">Bid Euchre</string>
    <string name="game_name_cornhole">Cornhole</string>
    <string name="game_name_custom">Custom Game</string>
    <string name="game_successfully_created">Game Successfully Created</string>
    <string name="default_team_name">Team team_number</string>
    <string name="extra_game_class">EXTRA_GAME_CLASS</string>
    <string name="extra_game_name">EXTRA_GAME_NAME</string>
    <string name="game_date_label">Game Date: </string>
    <string name="game_name_label">Game Name: </string>
    <string name="game_type_not_found">game_type Game Class could not be found.</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="please_enter_team_name">Please enter a name for Team team_number</string>
    <string name="please_select_a_game">Please select which game you are playing</string>
    <string name="same_team_names">Would you like to use the same team names?</string>
    <string name="start_game">Start Game</string>
    <string name="team_names_label">Team Names: </string>
    <string name="team_scores_label">Team Scores: </string>
    <string name="version">Version: </string>
    <string name="view_history">View History</string>
    <string name="welcome_to_scores">Welcome to Scores!</string>
    <string name="whoopsies">Whoopsies!</string>
    <string name="yes">Yes</string>
</resources>