<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/m_conout"
    style="@style/Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameOptionSelector">

    <TextView
        android:id="@+id/m_tvGameName"
        style="@style/HeaderText.Background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/m_btnStart"
        style="@style/MenuButton.Dynamic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:onClick="onGameStartClickHandler"
        android:text="@string/start_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_tvGameName" />

    <Button
        android:id="@+id/m_btnHistory"
        style="@style/MenuButton.Dynamic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="onViewHistoryClickHandler"
        android:text="@string/view_history"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/m_btnStart"
        app:layout_constraintStart_toStartOf="@id/m_btnStart"
        app:layout_constraintTop_toBottomOf="@id/m_btnStart" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/MenuButton.Dynamic"
        android:id="@+id/m_btnClear"
        android:onClick="onClearGameDataClickHandler"
        android:text="@string/clear_data"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/m_btnStart"
        app:layout_constraintTop_toBottomOf="@id/m_btnHistory"
        app:layout_constraintStart_toStartOf="@+id/m_btnStart"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/MenuButton.Dynamic"
        android:id="@+id/m_btnDeleteGame"
        android:onClick="onDeleteGameClickHandler"
        android:text="@string/delete_game"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@id/m_btnStart"
        app:layout_constraintStart_toStartOf="@id/m_btnStart"
        app:layout_constraintTop_toBottomOf="@id/m_btnClear"/>
</androidx.constraintlayout.widget.ConstraintLayout>