<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/m_tvGameName"
            app:layout_constraintEnd_toEndOf="@id/m_tvpNamesLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/m_tvGameName"
            style="@style/DefaultText.Black.Left.Bold"
            android:text="@string/game_name_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/m_tvGameName"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            style="@style/StatDataLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/m_tvpNamesLabel"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/DefaultText.Black.Left.Bold"
            app:layout_constraintTop_toTopOf="@id/m_tvGameDate"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/m_tvpNamesLabel"
            app:layout_constraintBottom_toBottomOf="@id/m_tvGameDate"
            android:text="@string/game_date_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/m_tvGameDate"
            style="@style/StatDataLabel"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintLeft_toLeftOf="@id/m_tvGameName"
            app:layout_constraintTop_toBottomOf="@id/m_tvGameName"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            style="@style/DefaultText.Black.Left.Bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/m_tvTeamNames"
            app:layout_constraintBottom_toBottomOf="@id/m_tvTeamNames"
            app:layout_constraintEnd_toEndOf="@id/m_tvpNamesLabel"
            android:text="@string/team_names_label"
            android:id="@+id/m_tvpNamesLabel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/m_tvTeamNames"
            style="@style/StatDataLabel"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/m_tvGameDate"
            app:layout_constraintLeft_toRightOf="@id/m_tvpNamesLabel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/DefaultText.Black.Left.Bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/m_tvTeamScores"
            app:layout_constraintRight_toRightOf="@+id/m_tvpNamesLabel"
            app:layout_constraintBottom_toBottomOf="@id/m_tvTeamScores"
            android:text="@string/team_scores_label"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/m_tvTeamScores"
            style="@style/StatDataLabel"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintLeft_toLeftOf="@id/m_tvGameName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_tvTeamNames"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>