<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/m_conout"
    style="@style/Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/m_tvWelcomeLabel"
        style="@style/HeaderText.Background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_scores"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/m_tvPleaseSelectGame"
        style="@style/SubtitleText.Background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_a_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_tvWelcomeLabel" />

    <ScrollView
        style="@style/Container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/m_btnNew"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_tvPleaseSelectGame">

        <LinearLayout
            android:id="@+id/m_llDefault"
            style="@style/Container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:divider="@drawable/large_vertical_layout_divider"
            android:orientation="vertical"
            android:showDividers="middle" />
    </ScrollView>

    <Button
        android:id="@+id/m_btnNew"
        style="@style/MenuButton.Dynamic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="15dp"
        android:onClick="onCreateGameClickHandler"
        android:text="@string/create_new_game"
        app:layout_constraintBottom_toTopOf="@+id/m_tvVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/m_tvVersion"
        style="@style/DefaultText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="onVersionHistoryClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>